# UnrealEssentials

./: BuildDebug.ps1  CHANGELOG.md  Publish.ps1  PublishAll.ps1  PublishInterfaces.ps1  README.md  UnrealEssentials.sln
.github/workflows/: reloaded.yml
UTOC.Stream.Emulator.Interfaces/: IUtocEmulator.cs  Structures.cs  UTOC.Stream.Emulator.Interfaces.csproj
UnrealEssentials/: Api.cs  BuildLinked.ps1  CHANGELOG.MD  Config.cs  Mod.cs  ModConfig.json  Native.cs  Publish.ps1  Signatures.cs  UnrealEssentials.csproj  Utils.cs  changelog-template.hbs
UnrealEssentials.Interfaces/: IUnrealEssentials.cs  IUtocUtilities.cs  README.md  Structures.cs  UnrealEssentials.Interfaces.csproj
UnrealEssentials.Tests/: SignatureTests.cs  UnrealEssentials.Tests.csproj
UnrealEssentials/.github/workflows/: reloaded.yml
UnrealEssentials/Components/: Context.cs  PakMethods.cs  TypeExtensions.cs  UtocMethods.cs
UnrealEssentials/Signatures/Engine/: UE_4_18.yaml  UE_4_19.yaml  UE_4_20.yaml  UE_4_21.yaml  UE_4_22.yaml  UE_4_23.yaml  UE_4_24.yaml  UE_4_25.yaml  UE_4_26.yaml  UE_4_27.yaml  UE_5_0.yaml  UE_5_1.yaml  UE_5_2.yaml  UE_5_3.yaml  UE_5_4.yaml  UE_5_5.yaml  UE_5_6.yaml  UE_5_7.yaml
UnrealEssentials/Signatures/Game/: CallistoProtocol.yaml  ElliotMillennium.yaml  Expedition33.yaml  GuardiansOfAzuma.yaml  HifiRush.yaml  HogwartsLegacy.yaml  JJKCC.yaml  LegoBatmanLotDK.yaml  LiesOfP.yaml  MarvelRivals.yaml  NobodyWantsToDie.yaml  P3R.yaml  RomeoIsADeadMan.yaml  SMT5V.yaml  Sackboy.yaml  ScarletNexus.yaml  SonicRacingCrossworlds.yaml  SparkingZero.yaml  inZOI.yaml
UnrealEssentials/Template/: ModBase.cs  ModContext.cs  Startup.cs
UnrealEssentials/Template/Configuration/: Configurable.cs  Configurator.cs  ConfiguratorMixinBase.cs  Utilities.cs
UnrealEssentials/Types/: Imports.cs  PEResource.cs
UnrealEssentials/Unreal/: Native.cs  UnrealArray.cs  UnrealMemory.cs  UnrealName.cs  UnrealString.cs
UtocEmulator/: CHANGELOG.MD  Cargo.toml
UtocEmulator/UTOC.Stream.Emulator/: Api.cs  BuildLinked.ps1  Config.cs  Constants.cs  Extensions.cs  LogAdapter.cs  Mod.cs  ModConfig.json  Publish.ps1  RustApi.cs  UTOC.Stream.Emulator.csproj  UtocEmulator.cs
UtocEmulator/UTOC.Stream.Emulator/DummyPaks/: Fn64BugFix.pak  FrozenIndex.pak
UtocEmulator/UTOC.Stream.Emulator/Template/: ModBase.cs  ModContext.cs  Startup.cs
UtocEmulator/UTOC.Stream.Emulator/Template/Configuration/: Configurable.cs  Configurator.cs  ConfiguratorMixinBase.cs  Utilities.cs
UtocEmulator/fileemu-utoc-stream-emulator/: Cargo.toml
UtocEmulator/fileemu-utoc-stream-emulator/benches/: my_benchmark.rs
UtocEmulator/fileemu-utoc-stream-emulator/scripts/: container_header.py  hasher.py  meta.py
UtocEmulator/fileemu-utoc-stream-emulator/src/: asset_collector.rs  exports.rs  io_package.rs  io_toc.rs  lib.rs  metadata.rs  pak_package.rs  platform.rs  string.rs  toc_factory.rs
UtocEmulator/toc-builder-test/: Cargo.toml
UtocEmulator/toc-builder-test/src/: main.rs
UtocEmulator/utoc-emulator/: Cargo.toml
UtocEmulator/utoc-emulator/src/: assets.rs  factory.rs  ffi.rs  lib.rs  logger.rs  metadata.rs
UtocEmulator/utoc-extractor/: Cargo.toml
UtocEmulator/utoc-extractor/data/: config.ini
UtocEmulator/utoc-extractor/src/: cli.rs  common.rs  gui.rs  main.rs
UtocEmulator/utoc-extractor/src/actions/: convert.rs  unpack.rs
UtocEmulator/utoc-lib/: Cargo.toml
UtocEmulator/utoc-lib/src/: assets.rs  lib.rs  metadata.rs  store.rs
