[package]
name = "fileemu-utoc-stream-emulator"
version = "1.0.5"
edition = "2021"
authors = [ "Rirurin" ]
description = "Simulates Unreal Engine IO Store files. Allows mods to add or replace existing files using files on disk."
repository = "https://github.com/AnimatedSwine37/UnrealEssentials/"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4"
byteorder = "1"
cityhasher = "0.1"
libc = "0.2"
sha1 = { version = "0.10", optional = true }

[features]
hash_meta = ["dep:sha1"]

[lib]
crate-type = ["cdylib", "rlib"] # rlib for criterion

# Benchmark Stuff
[[bench]]
name = "my_benchmark"
harness = false