[package]
name = "utoc-extractor"
version = "1.0.0"
authors = [ "Rirurin" ]
description = "IO Store archive extractor designed to integrate with Unreal Essentials"
repository = "https://github.com/AnimatedSwine37/UnrealEssentials/"
edition = "2024"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.2"
egui = "0.34.3"
egui-winit = "0.34.3"
indicatif = "0.18.4"
retoc = { git = "https://github.com/rirurin/retoc" }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
utoc-lib = { path = "../utoc-lib" }
walkdir = "2.5.0"
winit = "0.30.13"