[package]
name = "utoc-extractor"
version = "1.0.0"
authors = [ "Rirurin" ]
description = "IO Store archive extractor designed to integrate with Unreal Essentials"
repository = "https://github.com/AnimatedSwine37/UnrealEssentials/"
edition = "2024"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.2"
eframe = "0.34.3"
egui = "0.34.3"
egui_dock = "0.19.1"
egui_extras = "0.34.3"
indicatif = "0.18.4"
retoc = { git = "https://github.com/rirurin/retoc" }
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
utoc-lib = { path = "../utoc-lib" }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
wfd = "0.1.8"

[target.'cfg(not(windows))'.dependencies]
rfd = "0.17.2"